--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> Receitas brasileiras </title>
-        <link rel = "stylesheet" href = "styles.css">
+        <link rel = "stylesheet" href = "/dist/styles.css">
         <link href = 'https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel = 'stylesheet'>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
@@ -70,6 +70,6 @@
                 <span class = "text-sm"> Projeto feito seguindo o curso 'The Odin Project' • <a href = "https://pt.wikipedia.org/wiki/Culin%C3%A1ria_do_Brasil"> História da Culinária </a> </span>
             </div>
         </div>
-        <script src = "script.js"></script>
+        <script src = "dist/script.js"></script>
     </body>
 </html>
