--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> Receitas brasileiras </title>
-        <link rel = "stylesheet" href = "dist/styles.css">
+        <link rel = "stylesheet" href = "./dist/styles.css">
         <link href = 'https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel = 'stylesheet'>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
