--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                     <span> A culinária, em sua essência, trata-se da arte de preparar alimentos. Por muito tempo, a comida foi tratada pela raça humana apenas como um meio fundamental para a sobrevivência, mas com o desenvolvimento da civilização, surge um novo ponto de vista sob a comida - ganhando um aspecto sofisticado com a elaboração de pratos através de temperos, ingredientes e cores, que variam de acordo com a cultura de um povo. </span> <br>
                     <span> A culinária brasileira começa a tomar forma durante o período da colonização, época na qual os ingredientes de diversas culturas - portuguesas, indígenas e africanas, começaram a se misturar e formar o que conhecemos nos dias de hoje. </span>
                 </div>
-                <div id = 'img' class = "ml-4 w-480 h-96 mr-2"> <img src = "/assets/images/brazillian_plates.jpg"></div>
+                <div id = 'img' class = "ml-4 w-480 h-96 mr-2"> <img src = "./assets/images/brazillian_plates.jpg"></div>
                
             </div>
         </div>
         <div class = 'h-600 w-full flex justify-evenly bg-orange-500 p-8'>
-            <div class = 'w-128 h-96'> <img src = "/assets/images/brazillian_family.jpg"> </div>
+            <div class = 'w-128 h-96'> <img src = "./assets/images/brazillian_family.jpg"> </div>
             <div class = 'w-412 min-h-fit flex flex-col justify-center text-center text-xl bg-white shadow-lg border-b-8  border-r-8 border-black'>
                 <span> No período colonial os portugueses assimilaram os ingredientes dos nativos da África, Ásia e América para sobreviver em terras estranhas, mas também por curiosidade. No Brasil a produção interna de alimentos era limitada, pois a economia estava toda voltada para a exportação.
                 <span> A atual culinária colonial constituinte das bases culinárias do país pode ser dividida em quatro correntes:[8] a do litoral açucareiro; a do norte; a dos bandeirantes; e a quarta, da pecuária.  </span>
@@ -34,39 +34,39 @@
         <div class = 'p-5 bg-slate-800'> 
             <div class =  'h-600  bg-slate-500 flex items-center justify-evenly p-5'>
                 <div class = 'recipe-card w-44 max-h-44  shadow-lg shadow-black border-orange-700 rounded-lg'>
-                    <div class> <a href = "https://panelinha.com.br/receita/feijoada"> <img src = "/assets/images/feijoada.jpg"> </a>  </div>
+                    <div class> <a href = "https://panelinha.com.br/receita/feijoada"> <img src = "./assets/images/feijoada.jpg"> </a>  </div>
                     <div class = 'flex justify-center bg-slate-800 text-white font-extralight'> Feijoada </div>
                 </div>
 
                 <div class = 'recipe-card w-44 max-h-44 shadow-lg shadow-black  border-orange-700'>
-                    <div class> <a href = "https://panelinha.com.br/receita/pao-de-queijo">  <img src = "/assets/images/pao-de-queijo.jpg"> </a> </div>
+                    <div class> <a href = "https://panelinha.com.br/receita/pao-de-queijo">  <img src = "./assets/images/pao-de-queijo.jpg"> </a> </div>
                     <div class = 'flex justify-center bg-slate-800 text-white font-extralight'> Pão de Queijo </div>
                 </div>
                 <div class = 'recipe-card w-44 max-h-44  shadow-lg shadow-black border-orange-700'>
-                    <div class> <a href = "https://panelinha.com.br/receita/brigadeiro"> <img src = "/assets/images/brigadeiro.jpg"> </a> </div>
+                    <div class> <a href = "https://panelinha.com.br/receita/brigadeiro"> <img src = "./assets/images/brigadeiro.jpg"> </a> </div>
                     <div class = 'flex justify-center bg-slate-800 text-white font-extralight'> Brigadeiro </div>
                 </div>
             </div>
             <div class =  'h-600 w-full bg-slate-500  flex items-center justify-evenly p-5'>
                 <div  class = 'recipe-card w-44 max-h-44 shadow-lg shadow-black border-orange-700'>
-                    <div class> <a href = "https://panelinha.com.br/receita/acaraje-da-paloma"> <img src = "/assets/images/acaraje.jpg"> </a> </div>
+                    <div class> <a href = "https://panelinha.com.br/receita/acaraje-da-paloma"> <img src = "./assets/images/acaraje.jpg"> </a> </div>
                     <div class = 'flex justify-center bg-slate-800 text-white font-extralight'> Acarajé </div>
                 </div>
 
                 <div class = 'recipe-card w-44 max-h-44 shadow-lg shadow-black border-orange-700'>
-                    <div class> <a href = "https://panelinha.com.br/receita/bolo-de-fuba"> <img src = "/assets/images/bolo-de-fuba.jpg"> </a> </div>
+                    <div class> <a href = "https://panelinha.com.br/receita/bolo-de-fuba"> <img src = "./assets/images/bolo-de-fuba.jpg"> </a> </div>
                     <div class = 'flex justify-center bg-slate-800 text-white font-extralight'> Bolo de fubá </div>
                 </div>
 
                 <div class = 'recipe-card w-44 max-h-44 shadow-lg shadow-black border-orange-700'>
-                    <div class> <a href = "https://panelinha.com.br/receita/arroz-carreteiro-churrasco"> <img src = "/assets/images/arroz-carreteiro.jpg"> </a> </div> 
+                    <div class> <a href = "https://panelinha.com.br/receita/arroz-carreteiro-churrasco"> <img src = "./assets/images/arroz-carreteiro.jpg"> </a> </div> 
                     <div class = 'flex justify-center bg-slate-800 text-white font-extralight'> Arroz carreteiro </div>
                 </div>
             </div>
         </div>
         <div class = 'bg-slate-800'> 
             <div class = "bg-orange-400 w-full p-3  flex items-center justify-center gap-4">
-                <div class = "w-20 h-2 bg-black ml-2"><a href = "https://www.theodinproject.com/lessons/foundations-recipes"><img src = "/assets/images/odin-project.png"> </a></div>
+                <div class = "w-20 h-2 bg-black ml-2"><a href = "https://www.theodinproject.com/lessons/foundations-recipes"><img src = "./assets/images/odin-project.png"> </a></div>
                 <span class = "text-sm"> Projeto feito seguindo o curso 'The Odin Project' • <a href = "https://pt.wikipedia.org/wiki/Culin%C3%A1ria_do_Brasil"> História da Culinária </a> </span>
             </div>
         </div>
