[Add light theme]

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas Brasileiras</title>
     <link rel = "stylesheet" href = "styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Long+Cang&display=swap');
+      </style>
+    <script src = "script.js"> </script>
 </head>
 <body>
     <div class = "Main Content">
 
         <div class = "Main Title">
             <h1> Receitas Brasileiras </h1>
+            <button id = 'light-toggle'><i class='bx bx-sun'></i></button>
         </div>
 
         <div class = "Text Culinary Story">
@@ -87,8 +93,7 @@
         </div>
 
         <div class = "Bottom Content">
-            <span> Projeto realizado por <a href = "https://github.com/murilosoarez"> @murilosoarez </a>| </span>
-            <a href = "https://github.com/murilosoarez/Recipe-Page"> <img src = "img/Git.png"> </a> 
+            <a id = 'repository-link' href = "https://github.com/murilosoarez/Recipe-Page"><img src = "img/Git.png"> </a> 
         </div>
     
     </div>
