[Fix text overflow and bottom positioning]

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             </div>
 
         </div>
-
+        
         <div class = "Bottom Content">
-            <a id = 'repository-link' href = "https://github.com/murilosoarez/Recipe-Page"><img src = "img/Git.png"> </a> 
+            <a href = "https://github.com/murilosoarez/Recipe-Page"> <img src = "img/Git.png"> </a>
         </div>
     
     </div>
