[Finish main HTML and CSS structure]

--- a/index.html
+++ b/index.html
@@ -9,18 +9,50 @@
 <body>
     <div class = "Main Container">
         <div class = "Page Header"></div>
+
         <div class = "Page Content">
-            <div class = "Main Title"></div>
-            <div class = "Main Text Display">
-                <div class = "Card One"></div>
-                <div class = "Card Two"></div>
-                <div class = "Card Three"></div>
-                <div class = "Card Four"></div>
+            <div class = "Title Main"><h1> História da Culinária Brasileira</h1></div>
+            <div class = "Main Content Display">
+                <div class = "Text Card One">
+                    <p>A história da culinária brasileira é rica e diversificada, sendo moldada por uma combinação de influências indígenas, europeias, africanas e, mais recentemente, de outras partes do mundo. Essa fusão de culturas criou uma gastronomia única, cheia de sabores autênticos e pratos tradicionais que refletem a diversidade do país.</p>
+                    <p>Antes da chegada dos colonizadores europeus, os povos indígenas já tinham uma culinária estabelecida, baseada em ingredientes nativos como mandioca, milho, peixes, frutas e raízes. </p>
+                </div>
+                <div class = "Text Card Two">
+                    Com a chegada dos colonizadores portugueses no século XVI, uma nova gama de ingredientes foi introduzida, como o açúcar, trazido para as terras brasileiras para a produção de açúcar. A influência portuguesa também pode ser vista em pratos como a feijoada, que tem suas raízes nas tradições da cozinha portuguesa.
+                </div>
+                <div class = "Text Card Three">
+                    <p>Os africanos escravizados trouxeram consigo uma rica herança culinária, contribuindo com técnicas de preparo, especiarias, frutas e o uso intensivo de peixes e frutos do mar. Muitos pratos brasileiros, como o acarajé e o vatapá, são derivados da culinária africana.</p>
+                </div>
+                <div class = "Text Card Four">
+                    <p>A diversidade regional do Brasil também desempenhou um papel fundamental na formação da culinária. Cada região do país possui ingredientes e pratos característicos, influenciados pela geografia, clima e cultura local. </p>
+                </div>
             </div>
-            <div class = "Second Title"></div>
-            <div class 
+            <div class = "Title Second"><h2> Receitas Brasileiras</h2></div>
+            <div class = "Second Content Display">
+                <div class = "Image Card One">
+                    <div class = "Image Container"><img src = "images/feijoada.jpg"></div>
+                    <h3> Feijoada </h3>
+                </div>
+                <div class = "Image Card Two">
+                    <div class = "Image Container"><img src = "images/pao-queijo.jpg"></div>
+                    <h3> Pão de Queijo </h3>
+                </div>
+                <div class = "Image Card Three">
+                    <div class = "Image Container"><img src = "/images/acarajé.jpg"></div>
+                    <h3> Acarajé </h3>
+                </div>
+                <div class = "Image Card Four">
+                    <div class = "Image Container"><img src = "images/brigadeiro.jpg"></div>
+                    <h3> Brigadeiro </h3>
+                </div>
+            </div>
         </div>
-        <div class = "Page Footer"></div>
+
+        <div class = "Page Footer">
+            <div class = "Footer Content">
+                <a href = "https://github.com/murilosoarez/Recipe-Page"><img src = "images/github-mark.svg"></a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
