--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Page</title>
     <link rel = "stylesheet" href = "styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class = "Main Container">
@@ -14,8 +17,8 @@
             <div class = "Title Main"><h1> História da Culinária Brasileira</h1></div>
             <div class = "Main Content Display">
                 <div class = "Text Card One">
-                    <p>A história da culinária brasileira é rica e diversificada, sendo moldada por uma combinação de influências indígenas, europeias, africanas e, mais recentemente, de outras partes do mundo. Essa fusão de culturas criou uma gastronomia única, cheia de sabores autênticos e pratos tradicionais que refletem a diversidade do país.</p>
-                    <p>Antes da chegada dos colonizadores europeus, os povos indígenas já tinham uma culinária estabelecida, baseada em ingredientes nativos como mandioca, milho, peixes, frutas e raízes. </p>
+                    <p>A história da culinária brasileira é rica e diversificada, sendo moldada por uma combinação de influências <strong>indígenas, europeias, africanas</strong> e, mais recentemente, de outras partes do mundo. Essa fusão de culturas criou uma gastronomia única, cheia de sabores autênticos e pratos tradicionais que refletem a diversidade do país.</p>
+                    <p>Antes da chegada dos colonizadores europeus, os povos indígenas já tinham uma <strong>culinária estabelecida</strong>, baseada em ingredientes nativos como mandioca, milho, peixes, frutas e raízes. </p>
                 </div>
                 <div class = "Text Card Two">
                     Com a chegada dos colonizadores portugueses no século XVI, uma nova gama de ingredientes foi introduzida, como o açúcar, trazido para as terras brasileiras para a produção de açúcar. A influência portuguesa também pode ser vista em pratos como a feijoada, que tem suas raízes nas tradições da cozinha portuguesa.
