[Add dark theme switch]

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class = "light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +8,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src = "script.js"></script>
 </head>
 <body>
     <div class = "Main Container">
         <div class = "Page Header"></div>
 
         <div class = "Page Content">
-            <div class = "Title Main"><h1> História da Culinária Brasileira</h1></div>
-            <div class = "Main Content Display">
+            <div class = "Title Main">
+                <h1> História da Culinária Brasileira</h1>
+                <button id = 'swap-theme'></button>
+            </div>
+                <div class = "Main Content Display">
                 <div class = "Text Card One">
                     <p>A história da culinária brasileira é rica e diversificada, sendo moldada por uma combinação de influências <strong>indígenas, europeias, africanas</strong> e, mais recentemente, de outras partes do mundo. Essa fusão de culturas criou uma gastronomia única, cheia de sabores autênticos e pratos tradicionais que refletem a diversidade do país.</p>
                     <p>Antes da chegada dos colonizadores europeus, os povos indígenas já tinham uma <strong>culinária estabelecida</strong>, baseada em ingredientes nativos como mandioca, milho, peixes, frutas e raízes. </p>
