--- a/index.html
+++ b/index.html
@@ -13,52 +13,55 @@
 </head>
 <body>
     <div class = "Main Container">
-        <div class = "Page Header"></div>
-
-        <div class = "Page Content">
-            <div class = "Title Main">
-                <h1> História da Culinária Brasileira</h1>
-                <button id = 'swap-theme'></button>
+        <h1> Culinária Brasileira </h1>
+        <div class = "Main Card">
+            <div class = "Image One"><img src = "images/Screenshot 2024-02-28 at 10-51-49 129e86_81cd3fb01fc64345adacc36828289e98~mv2.jpg (WEBP Image 980 × 637 pixels).png"></div>
+            <div class = "Paragraph One">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, ad amet perspiciatis consequatur neque atque at magnam laudantium voluptatibus cupiditate excepturi, rem necessitatibus nemo, quam esse tenetur mollitia delectus repudiandae.
+                Ratione vero labore odio rerum delectus architecto! Tenetur dignissimos at iste facere quasi modi dolores. Sequi, consequuntur. Earum beatae quisquam laudantium, modi et nihil eius facere ad atque, autem possimus.
+                Deleniti veniam vero beatae assumenda illum ipsum earum alias facilis doloremque ex accusamus aspernatur dignissimos ducimus, iste, pariatur nemo odit accusantium, rem inventore doloribus? Quis laudantium quaerat tenetur mollitia natus!
+                Obcaecati voluptatibus quis beatae necessitatibus eius culpa mollitia reprehenderit pariatur, nemo veniam laborum. Iure soluta adipisci natus, consequuntur aut qui perferendis consectetur ab corporis autem neque, saepe quo odio quod!
+                Nulla, error et tempora neque debitis, vitae dolore necessitatibus eum dolores libero enim consequatur rerum voluptatibus quae iste repudiandae. A aut dolorum dignissimos expedita! Tenetur ullam numquam soluta reprehenderit voluptatem.</p>
             </div>
-                <div class = "Main Content Display">
-                <div class = "Text Card One">
-                    <p>A história da culinária brasileira é rica e diversificada, sendo moldada por uma combinação de influências <strong>indígenas, europeias, africanas</strong> e, mais recentemente, de outras partes do mundo. Essa fusão de culturas criou uma gastronomia única, cheia de sabores autênticos e pratos tradicionais que refletem a diversidade do país.</p>
-                    <p>Antes da chegada dos colonizadores europeus, os povos indígenas já tinham uma <strong>culinária estabelecida</strong>, baseada em ingredientes nativos como mandioca, milho, peixes, frutas e raízes. </p>
-                </div>
-                <div class = "Text Card Two">
-                    Com a chegada dos colonizadores portugueses no século XVI, uma nova gama de ingredientes foi introduzida, como o açúcar, trazido para as terras brasileiras para a produção de açúcar. A influência portuguesa também pode ser vista em pratos como a feijoada, que tem suas raízes nas tradições da cozinha portuguesa.
-                </div>
-                <div class = "Text Card Three">
-                    <p>Os africanos escravizados trouxeram consigo uma rica herança culinária, contribuindo com técnicas de preparo, especiarias, frutas e o uso intensivo de peixes e frutos do mar. Muitos pratos brasileiros, como o acarajé e o vatapá, são derivados da culinária africana.</p>
-                </div>
-                <div class = "Text Card Four">
-                    <p>A diversidade regional do Brasil também desempenhou um papel fundamental na formação da culinária. Cada região do país possui ingredientes e pratos característicos, influenciados pela geografia, clima e cultura local. </p>
-                </div>
+            <div class = "Paragraph Two">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nam beatae omnis, iste impedit inventore tempora ut eius aspernatur porro placeat fugit. Eaque corrupti possimus adipisci aperiam doloribus cumque maiores.
+                Vero praesentium reiciendis consectetur, fugiat numquam esse voluptatem delectus perspiciatis corrupti alias aut! Ipsa, porro sint natus perspiciatis suscipit tempore illum itaque libero, voluptatibus ipsam magni sunt? Maxime, cum excepturi.
+                Voluptatem accusantium doloribus dolorum sunt modi voluptate, quos, iure iusto quis facilis quas? Id at culpa libero exercitationem, doloribus ullam placeat, magnam totam expedita possimus, sint accusamus asperiores ad! Officiis.
+                Deleniti similique sequi a, ab dignissimos nemo aperiam incidunt eligendi! Ipsum aut, assumenda labore sint ratione, error at magni asperiores molestiae saepe maxime dolores totam, ullam repellat rerum blanditiis impedit.
+                Inventore labore enim quas amet praesentium ratione quis, temporibus voluptate. Possimus voluptatem animi expedita ipsa dolor nemo aliquid obcaecati amet optio dicta consequuntur molestias architecto, porro fuga ullam vero in.</p>
             </div>
-            <div class = "Title Second"><h2> Receitas Brasileiras</h2></div>
-            <div class = "Second Content Display">
-                <div class = "Image Card One">
-                    <div class = "Image Container"><img src = "images/feijoada.jpg"></div>
-                    <h3> Feijoada </h3>
-                </div>
-                <div class = "Image Card Two">
-                    <div class = "Image Container"><img src = "images/pao-queijo.jpg"></div>
-                    <h3> Pão de Queijo </h3>
-                </div>
-                <div class = "Image Card Three">
-                    <div class = "Image Container"><img src = "/images/acarajé.jpg"></div>
-                    <h3> Acarajé </h3>
-                </div>
-                <div class = "Image Card Four">
-                    <div class = "Image Container"><img src = "images/brigadeiro.jpg"></div>
-                    <h3> Brigadeiro </h3>
-                </div>
+            <div class = "Paragraph Three">
+                <h2> Pratos típicos</h2>
             </div>
-        </div>
-
-        <div class = "Page Footer">
-            <div class = "Footer Content">
-                <a href = "https://github.com/murilosoarez/Recipe-Page"><img src = "images/github-mark.svg"></a>
+            <div class = "Cards">
+                <div class = "Card">
+                    <div class = "Recipe Container">
+                        <img src = "images/acarajé.jpg">
+                    </div>
+                    <h3> Acarajé</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nihil voluptatum ut temporibus, nobis deleniti, cum a totam laboriosam reiciendis tenetur saepe suscipit provident earum ad atque aliquam modi consequatur.</p>
+                </div>
+                <div class = "Card">
+                    <div class = "Recipe Container">
+                        <img src = "images/acarajé.jpg">
+                    </div>
+                    <h3> Acarajé</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nihil voluptatum ut temporibus, nobis deleniti, cum a totam laboriosam reiciendis tenetur saepe suscipit provident earum ad atque aliquam modi consequatur.</p>
+                </div>
+                <div class = "Card">
+                    <div class = "Recipe Container">
+                        <img src = "images/acarajé.jpg">
+                    </div>
+                    <h3> Acarajé</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nihil voluptatum ut temporibus, nobis deleniti, cum a totam laboriosam reiciendis tenetur saepe suscipit provident earum ad atque aliquam modi consequatur.</p>
+                </div>
+                <div class = "Card">
+                    <div class = "Recipe Container">
+                        <img src = "images/acarajé.jpg">
+                    </div>
+                    <h3> Acarajé</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nihil voluptatum ut temporibus, nobis deleniti, cum a totam laboriosam reiciendis tenetur saepe suscipit provident earum ad atque aliquam modi consequatur.</p>
+                </div>
             </div>
         </div>
     </div>
