--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class = "Main Container">
         <h1> Culinária Brasileira </h1>
         <div class = "Main Card">
-            <div class = "Image One"><img src = "images/Screenshot 2024-02-28 at 10-51-49 129e86_81cd3fb01fc64345adacc36828289e98~mv2.jpg (WEBP Image 980 × 637 pixels).png"></div>
+            <div class = "Image"><img src = "images/Screenshot 2024-02-28 at 10-51-49 129e86_81cd3fb01fc64345adacc36828289e98~mv2.jpg (WEBP Image 980 × 637 pixels).png"></div>
             <div class = "Paragraph One">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, ad amet perspiciatis consequatur neque atque at magnam laudantium voluptatibus cupiditate excepturi, rem necessitatibus nemo, quam esse tenetur mollitia delectus repudiandae.
                 Ratione vero labore odio rerum delectus architecto! Tenetur dignissimos at iste facere quasi modi dolores. Sequi, consequuntur. Earum beatae quisquam laudantium, modi et nihil eius facere ad atque, autem possimus.
@@ -43,27 +43,31 @@
                 </div>
                 <div class = "Card">
                     <div class = "Recipe Container">
-                        <img src = "images/acarajé.jpg">
+                        <img src = "images/feijoada.jpg">
                     </div>
-                    <h3> Acarajé</h3>
+                    <h3> Feijoada</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nihil voluptatum ut temporibus, nobis deleniti, cum a totam laboriosam reiciendis tenetur saepe suscipit provident earum ad atque aliquam modi consequatur.</p>
                 </div>
                 <div class = "Card">
                     <div class = "Recipe Container">
-                        <img src = "images/acarajé.jpg">
+                        <img src = "images/brigadeiro.jpg">
                     </div>
-                    <h3> Acarajé</h3>
+                    <h3> Brigadeiro</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nihil voluptatum ut temporibus, nobis deleniti, cum a totam laboriosam reiciendis tenetur saepe suscipit provident earum ad atque aliquam modi consequatur.</p>
                 </div>
                 <div class = "Card">
                     <div class = "Recipe Container">
-                        <img src = "images/acarajé.jpg">
+                        <img src = "images/pao-queijo.jpg">
                     </div>
-                    <h3> Acarajé</h3>
+                    <h3> Pão de Queijo</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nihil voluptatum ut temporibus, nobis deleniti, cum a totam laboriosam reiciendis tenetur saepe suscipit provident earum ad atque aliquam modi consequatur.</p>
                 </div>
             </div>
         </div>
+        <div class = "Recipe Card">
+    
+        </div>
     </div>
+
 </body>
 </html>
