--- a/index.html
+++ b/index.html
@@ -1,73 +1,94 @@
 <!DOCTYPE html>
-<html lang="en" class = "light">
+<html lang="en" class="light">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Page</title>
-    <link rel = "stylesheet" href = "styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src = "script.js"></script>
+    <script src="script.js"></script>
 </head>
+
 <body>
-    <div class = "Main Container">
+    <div class="Main Container">
         <h1> Culinária Brasileira </h1>
-        <div class = "Main Card">
-            <div class = "Image"><img src = "images/Screenshot 2024-02-28 at 10-51-49 129e86_81cd3fb01fc64345adacc36828289e98~mv2.jpg (WEBP Image 980 × 637 pixels).png"></div>
-            <div class = "Paragraph One">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, ad amet perspiciatis consequatur neque atque at magnam laudantium voluptatibus cupiditate excepturi, rem necessitatibus nemo, quam esse tenetur mollitia delectus repudiandae.
-                Ratione vero labore odio rerum delectus architecto! Tenetur dignissimos at iste facere quasi modi dolores. Sequi, consequuntur. Earum beatae quisquam laudantium, modi et nihil eius facere ad atque, autem possimus.
-                Deleniti veniam vero beatae assumenda illum ipsum earum alias facilis doloremque ex accusamus aspernatur dignissimos ducimus, iste, pariatur nemo odit accusantium, rem inventore doloribus? Quis laudantium quaerat tenetur mollitia natus!
-                Obcaecati voluptatibus quis beatae necessitatibus eius culpa mollitia reprehenderit pariatur, nemo veniam laborum. Iure soluta adipisci natus, consequuntur aut qui perferendis consectetur ab corporis autem neque, saepe quo odio quod!
-                Nulla, error et tempora neque debitis, vitae dolore necessitatibus eum dolores libero enim consequatur rerum voluptatibus quae iste repudiandae. A aut dolorum dignissimos expedita! Tenetur ullam numquam soluta reprehenderit voluptatem.</p>
+        <div class="Main Card">
+            <div class="Image"><img
+                    src="images/Screenshot 2024-02-28 at 10-51-49 129e86_81cd3fb01fc64345adacc36828289e98~mv2.jpg (WEBP Image 980 × 637 pixels).png">
             </div>
-            <div class = "Paragraph Two">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nam beatae omnis, iste impedit inventore tempora ut eius aspernatur porro placeat fugit. Eaque corrupti possimus adipisci aperiam doloribus cumque maiores.
-                Vero praesentium reiciendis consectetur, fugiat numquam esse voluptatem delectus perspiciatis corrupti alias aut! Ipsa, porro sint natus perspiciatis suscipit tempore illum itaque libero, voluptatibus ipsam magni sunt? Maxime, cum excepturi.
-                Voluptatem accusantium doloribus dolorum sunt modi voluptate, quos, iure iusto quis facilis quas? Id at culpa libero exercitationem, doloribus ullam placeat, magnam totam expedita possimus, sint accusamus asperiores ad! Officiis.
-                Deleniti similique sequi a, ab dignissimos nemo aperiam incidunt eligendi! Ipsum aut, assumenda labore sint ratione, error at magni asperiores molestiae saepe maxime dolores totam, ullam repellat rerum blanditiis impedit.
-                Inventore labore enim quas amet praesentium ratione quis, temporibus voluptate. Possimus voluptatem animi expedita ipsa dolor nemo aliquid obcaecati amet optio dicta consequuntur molestias architecto, porro fuga ullam vero in.</p>
+            <div class="Paragraph One">
+                <p>A história da culinária no Brasil é um rico e complexo mosaico de influências, sabores e tradições
+                    que refletem a diversidade cultural e étnica do país. Desde os tempos pré-coloniais até os dias
+                    atuais, a culinária brasileira tem sido moldada por uma fusão única de culturas indígenas,
+                    africanas, europeias e, mais recentemente, de influências globais. Antes mesmo da chegada dos
+                    colonizadores portugueses em 1500, as populações indígenas que habitavam o território brasileiro já
+                    desenvolviam suas próprias técnicas culinárias. Com uma rica biodiversidade à sua disposição, os
+                    indígenas utilizavam uma variedade de ingredientes nativos, como mandioca, milho, peixes, frutas e
+                    raízes, em seus pratos. Técnicas como a moagem, a fermentação e o uso de panelas de barro eram
+                    comuns na preparação dos alimentos. </p>
             </div>
-            <div class = "Paragraph Three">
+            <div class="Paragraph Two">
+                <p> Cada região do país possui seus próprios pratos típicos e sabores distintos, influenciados pela
+                    geografia, clima e cultura local. No Norte, destacam-se pratos como o tacacá e o pato no tucupi,
+                    enquanto no Nordeste encontramos a carne de sol, o baião de dois e o cuscuz. No Sul, as influências
+                    europeias são mais evidentes, com o churrasco, a cuca e o entrevero sendo populares. Com o avanço da
+                    globalização e a urbanização, a culinária brasileira continua a evoluir e se adaptar. Ingredientes e
+                    pratos de diversas partes do mundo são incorporados à dieta brasileira, e restaurantes de culinária
+                    internacional se tornam cada vez mais comuns nas grandes cidades do país. No entanto, apesar das
+                    mudanças e influências externas, a culinária brasileira mantém sua identidade única, enraizada na
+                    história e na diversidade do país.</p>
+            </div>
+            <div class="Paragraph Three">
                 <h2> Pratos típicos</h2>
             </div>
-            <div class = "Cards">
-                <div class = "Card">
-                    <div class = "Recipe Container">
-                        <img src = "images/acarajé.jpg">
+            <div class="Cards">
+                <div class="Card">
+
+
+                    <div class="Recipe Container">
+                        <img src="images/acarajé.jpg">
                     </div>
                     <h3> Acarajé</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nihil voluptatum ut temporibus, nobis deleniti, cum a totam laboriosam reiciendis tenetur saepe suscipit provident earum ad atque aliquam modi consequatur.</p>
+                    <p>O acarajé é um icônico bolinho frito da culinária brasileira, com raízes na tradição africana, especialmente na região da Bahia, sendo preparado a partir de uma massa de feijão-fradinho, frequentemente acompanhado de vatapá, caruru e pimenta.
+                    </p>
+
                 </div>
-                <div class = "Card">
-                    <div class = "Recipe Container">
-                        <img src = "images/feijoada.jpg">
+                <div class="Card">
+                    <div class="Recipe Container">
+                        <img src="images/feijoada.jpg">
                     </div>
                     <h3> Feijoada</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nihil voluptatum ut temporibus, nobis deleniti, cum a totam laboriosam reiciendis tenetur saepe suscipit provident earum ad atque aliquam modi consequatur.</p>
+                    <p>A feijoada é um prato tradicionalmente brasileiro, composto por uma rica mistura de feijão-preto,
+                        carne de porco e outros ingredientes, sendo considerada uma verdadeira instituição gastronômica
+                        do país.</p>
                 </div>
-                <div class = "Card">
-                    <div class = "Recipe Container">
-                        <img src = "images/brigadeiro.jpg">
+                <div class="Card">
+                    <div class="Recipe Container">
+                        <img src="images/brigadeiro.jpg">
                     </div>
                     <h3> Brigadeiro</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nihil voluptatum ut temporibus, nobis deleniti, cum a totam laboriosam reiciendis tenetur saepe suscipit provident earum ad atque aliquam modi consequatur.</p>
+                    <p>O brigadeiro é uma sobremesa amada pelos brasileiros, feita com leite condensado, chocolate em
+                        pó, manteiga e granulado, com uma textura cremosa e um sabor irresistível.</p>
                 </div>
-                <div class = "Card">
-                    <div class = "Recipe Container">
-                        <img src = "images/pao-queijo.jpg">
+                <div class="Card">
+                    <div class="Recipe Container">
+                        <img src="images/pao-queijo.jpg">
                     </div>
                     <h3> Pão de Queijo</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nihil voluptatum ut temporibus, nobis deleniti, cum a totam laboriosam reiciendis tenetur saepe suscipit provident earum ad atque aliquam modi consequatur.</p>
+                    <p>O pão de queijo é uma delícia tipicamente mineira, feita com polvilho, queijo e outros
+                        ingredientes, resultando em bolinhos macios por dentro e crocantes por fora, sendo uma paixão
+                        nacional.</p>
                 </div>
             </div>
-        </div>
-        <div class = "Recipe Card">
-    
         </div>
     </div>
 
 </body>
+
 </html>
